src/test/ui/feature-gates/feature-gate-plugin_registrar.stderr
error[E0658]: compiler plugins are experimental and possibly buggy
  --> $DIR/feature-gate-plugin_registrar.rs:8:1
   |
LL | pub fn registrar() {}
   | ^^^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #29597 <https://github.com/rust-lang/rust/issues/29597> for more information
   = help: add `#![feature(plugin_registrar)]` to the crate attributes to enable

error[E0658]: compiler plugins are deprecated
  --> $DIR/feature-gate-plugin_registrar.rs:5:1
   |
LL | #[plugin_registrar]
   | ^^^^^^^^^^^^^^^^^^^
   |
   = note: see issue #29597 <https://github.com/rust-lang/rust/issues/29597> for more information
   = help: add `#![feature(plugin_registrar)]` to the crate attributes to enable

warning: use of deprecated attribute `plugin_registrar`: compiler plugins are deprecated. See https://github.com/rust-lang/rust/pull/64675
  --> $DIR/feature-gate-plugin_registrar.rs:5:1
   |
LL | #[plugin_registrar]
   | ^^^^^^^^^^^^^^^^^^^ help: may be removed in a future compiler version
   |
   = note: `#[warn(deprecated)]` on by default

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0658`.
